[gd_scene load_steps=13 format=4 uid="uid://b7fhnivvbba5g"]

[ext_resource type="Script" uid="uid://k1k557t7o5us" path="res://src/levels/level_01.gd" id="1_snsj5"]
[ext_resource type="PackedScene" uid="uid://mdrq5w8asrmt" path="res://scenes/skybox.tscn" id="2_r1b2b"]
[ext_resource type="TileSet" uid="uid://b7cwapb35fjoj" path="res://vfx/tunnels_tileset.tres" id="3_vhdi7"]
[ext_resource type="PackedScene" uid="uid://dtvv1vd08dxpi" path="res://scenes/player/hound.tscn" id="4_tdyds"]
[ext_resource type="PackedScene" uid="uid://cn8muomcp756l" path="res://scenes/ui/context_help/context_help_wasd.tscn" id="5_tibsv"]
[ext_resource type="PackedScene" uid="uid://dshcg6ttrayfs" path="res://scenes/ui/context_help/context_help_undo.tscn" id="6_mqd40"]
[ext_resource type="PackedScene" uid="uid://cm0e12th4r6sb" path="res://scenes/ui/you_win.tscn" id="7_b1qtw"]
[ext_resource type="PackedScene" uid="uid://m508xm344dmu" path="res://scenes/objects/cookie.tscn" id="8_ce6vt"]
[ext_resource type="PackedScene" uid="uid://bepb21ret8k4v" path="res://scenes/objects/doors/door_with_keys.tscn" id="10_tdyds"]
[ext_resource type="PackedScene" uid="uid://ddig6qrgjwtgm" path="res://scenes/objects/doors/door_with_buttons.tscn" id="10_vhdi7"]
[ext_resource type="PackedScene" uid="uid://chcnwbbuotral" path="res://scenes/objects/button.tscn" id="11_tdyds"]
[ext_resource type="PackedScene" uid="uid://bfflnav2qus7k" path="res://scenes/objects/spikes.tscn" id="13_tibsv"]

[node name="Level01" type="Node2D"]
script = ExtResource("1_snsj5")

[node name="Skybox" parent="." instance=ExtResource("2_r1b2b")]

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAIAAAAAAAEAAAAFAAIAAAAAAAIAAAAGAAIAAAABAAEAAAAHAAIAAAABAAAAAAAIAAIAAAABAAAAAAAJAAIAAAABAAAAAAAKAAIAAAABAAAAAAALAAIAAAABAAAAAAAMAAIAAAABAAAAAAANAAIAAAABAAAAAAAOAAIAAAABAAAAAAAPAAIAAAABAAAAAAAQAAIAAAABAAAAAAARAAIAAAABAAAAAAASAAIAAAABAAAAAAADAAIAAAABAAAAAAACAAIAAAABAAAAAAABAAIAAAABAAAAAAAAAAIAAAABAAAAAAAOAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAASAAMAAAAAAAAAAAARAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAPAAQAAAAAAAAAAAAOAAQAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAARAAUAAAAAAAAAAAAQAAUAAAAAAAAAAAAPAAUAAAAAAAAAAAAOAAUAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAAgAAAAAAAAAAAABAAoAAAAAAAAAAAACAAkAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAACAAIAAAAIAAgAAAADAAIAAAAJAAgAAAAEAAIAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAASAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAPAAcAAAAAAAAAAAARAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAARAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAASAAoAAAAAAAAAAAASAAkAAAAAAAAAAAARAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAEAAQAAAACAAEAAAAEAAUAAAACAAIAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAQAAAADAAEAAAAFAAUAAAAGAAIAAAAFAAYAAAACAAEAAAAFAAcAAAACAAIAAAAGAAQAAAADAAEAAAAGAAUAAAADAAEAAAAGAAYAAAADAAEAAAAGAAcAAAADAAIAAAAHAAQAAAAEAAEAAAAHAAUAAAAFAAMAAAAHAAYAAAADAAEAAAAHAAcAAAAGAAIAAAAIAAQAAAAAAAAAAAAIAAUAAAADAAAAAAAIAAYAAAADAAEAAAAIAAcAAAADAAEAAAAJAAQAAAACAAAAAAAJAAUAAAAGAAMAAAAJAAYAAAADAAEAAAAJAAcAAAAFAAIAAAAKAAQAAAADAAAAAAAKAAUAAAADAAEAAAAKAAYAAAADAAEAAAAKAAcAAAADAAIAAAALAAQAAAADAAAAAAALAAUAAAADAAEAAAALAAYAAAAFAAIAAAALAAcAAAAEAAIAAAAMAAQAAAADAAAAAAAMAAUAAAADAAEAAAAMAAYAAAADAAIAAAAMAAcAAAAAAAAAAAANAAQAAAAEAAAAAAANAAUAAAAEAAEAAAANAAYAAAAEAAIAAAANAAcAAAAAAAAAAAAGAAMAAAAFAAMAAAAHAAMAAAAEAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAFAAMAAAADAAEAAAAEAAMAAAACAAEAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAA=")
tile_set = ExtResource("3_vhdi7")

[node name="Hound" parent="." instance=ExtResource("4_tdyds")]
position = Vector2(192, 128)

[node name="ContextHelp" type="Node2D" parent="."]

[node name="ContextHelpWasd" parent="ContextHelp" instance=ExtResource("5_tibsv")]
offset_left = 495.5
offset_top = 64.0
offset_right = 632.5
offset_bottom = 95.0

[node name="ContextHelpUndo" parent="ContextHelp" instance=ExtResource("6_mqd40")]
visible = false
position = Vector2(541.752, 557.818)

[node name="YouWin" parent="ContextHelp" instance=ExtResource("7_b1qtw")]
visible = false
position = Vector2(800, 256)

[node name="Items" type="Node" parent="."]

[node name="Cookie" parent="Items" instance=ExtResource("8_ce6vt")]
position = Vector2(798, 353)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 320)

[node name="DoorButtons" parent="." node_paths=PackedStringArray("buttons") instance=ExtResource("10_vhdi7")]
position = Vector2(901, 45)
buttons = [NodePath("../Button"), NodePath("../Button2")]

[node name="Button" parent="." instance=ExtResource("11_tdyds")]
position = Vector2(707, 123)

[node name="Button2" parent="." instance=ExtResource("11_tdyds")]
position = Vector2(652, 92)

[node name="DoorWithKeys" parent="." node_paths=PackedStringArray("keys") instance=ExtResource("10_tdyds")]
position = Vector2(734, 376)
keys = [null, null]

[node name="Spikes" parent="." instance=ExtResource("13_tibsv")]
position = Vector2(546, 477)
scale = Vector2(2, 2)
_moving = true
